# psgscoring

./: .gitignore  CHANGELOG.md  CHANGELOG.old.md  CHANGES.md  DISCLAIMER.md  HETZNER_CURRENT_STATE.md  LICENSE  Makefile  README.md  README.old.md  SESSION_2026-04-26_summary.md  __init__.py  ancillary.py  anonymize_edf.py  classify.py  conftest.py  constants.py  diagnose_fp_fn.py  pipeline.py  plm.py  psgscoring_output_SN2.txt  pyproject.toml  respiratory.py  sanity_check_shhs.py  signal.py  spo2.py  utils.py  validate_psgipa.py  validation_report.py  validation_results_20260426.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  tests.yml
docs/: developer_handbook.md  handbook.tex
examples/: example_basic.py
psgscoring/: DISCLAIMER.md  __init__.py  _arousal.py  _core.py  _types.py  ancillary.py  breath.py  classify.py  constants.py  ecg_effort.py  ml_classifier.py  pipeline.py  pipeline_profiles.py  plm.py  postprocess.py  profiles.py  respiratory.py  signal.py  signal_quality.py  signal_quality_channels.py  spo2.py  utils.py
psgscoring.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
psgscoring/data/: lightgbm_v06_q7holdout.txt
psgscoring/tests/: conftest.py  test_psgscoring.py
scripts/: validate_ptt_sn3.py
scripts/release_v0.4.2/: 00_apply_v042_refactor.sh  00b_fix_sp_scope.sh  README.md
tests/: conftest.py  test_bug2_classifier_quality_gate.py  test_profiles.py  test_psgipa_reproducibility.py  test_psgscoring.py  test_ptt_and_audit.py  test_signal_quality.py  test_signal_quality_2d.py  test_smoke.py
