[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psgscoring"
version = "0.2.3"
description = "AASM 2.6-compliant respiratory event scoring for polysomnography"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
authors = [
    {name = "Bart Rombaut", email = "bart@slaapkliniek.be"},
]
keywords = [
    "polysomnography", "sleep", "apnea", "hypopnea", "AASM",
    "respiratory", "scoring", "signal-processing", "PSG",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "mne>=1.0",
]

[project.optional-dependencies]
full = ["yasa>=0.6", "reportlab"]
dev = ["pytest", "pytest-cov", "flake8"]

[project.urls]
Homepage = "https://github.com/bartrombaut/psgscoring"
Documentation = "https://psgscoring.readthedocs.io"
Repository = "https://github.com/bartrombaut/psgscoring"

[tool.setuptools.packages.find]
include = ["psgscoring*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
