[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psgscoring"
version = "0.2.951"
description = "Open-source Python library for AASM 2.6-compliant automated polysomnography scoring"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
authors = [
    {name = "Bart Rombaut", email = "bart.rombaut@gmail.com"},
    {name = "Briek Rombaut"},
    {name = "Cedric Rombaut"},
]
maintainers = [
    {name = "Bart Rombaut", email = "bart.rombaut@gmail.com"},
]
keywords = [
    "polysomnography", "PSG", "sleep", "AASM", "apnea", "hypopnea",
    "AHI", "respiratory", "scoring", "sleep-staging", "YASA",
    "hypoxic-burden",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "mne>=1.5,<2",
]

[project.optional-dependencies]
full = ["yasa>=0.6", "lightgbm>=3.0"]
test = ["pytest>=7.0", "hypothesis>=6.0"]

[project.urls]
Homepage = "https://slaapkliniek.be"
Repository = "https://github.com/bartromb/psgscoring"
Documentation = "https://github.com/bartromb/psgscoring/wiki"
Issues = "https://github.com/bartromb/psgscoring/issues"
Changelog = "https://github.com/bartromb/psgscoring/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["psgscoring*"]
